Retry overlays after surfaceDestroyed.

AndroidVideoSurfaceChooserImpl wasn't being notified when a surface
was destroyed.  As a result, it continued to believe that the client
was using an overlay, even after the client (which was notified when
the surface was destroyed) has switched to SurfaceTexture.

This CL adds a 'deletion callback' to AndroidOverlay, which calls
back when the overlay object is deleted.  SurfaceChooser uses this
to update its internal state.

Bug: 759024
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I833e933ac50a775685801cd5f8e7e197a574a435